Fixed alignment

--- a/styles/header.navigation.module.css
+++ b/styles/header.navigation.module.css
@@ -127,6 +127,20 @@
 /* Media Query for Desktops */
 
 @media only screen and (width > 1024px) {
+  @keyframes sections {
+    0% {
+      opacity: 0;
+      transform: rotateY(-70deg);
+      transform-origin: left;
+    }
+
+    100% {
+      opacity: 1;
+      transform: rotateY(0);
+      transform-origin: left;
+    }
+  }
+
   @keyframes navigation-item {
     0% {
       opacity: 0;
@@ -161,24 +175,29 @@
     width: 40vw;
   }
 
+  .navigation-section-container {
+    height: 90%;
+  }
+
   .svgs {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     align-items: center;
     height: 100%;
     width: 4rem;
+    gap: 30%;
+    padding: 1rem 0;
   }
 
   .navigation-container {
     top: 4rem;
     width: fit-content;
     animation: navigation 1s ease-out 0s 1 normal forwards;
-    justify-content: space-between;
   }
 
   .navigation-section-container:hover .section-wrapper {
     display: flex;
+    animation: sections 1s ease-out 0s 1 normal forwards;
   }
 
   .svgs > * {
@@ -188,7 +207,7 @@
 
   #closingButton {
     display: block;
-    height: 48px;
+    height: 10%px;
     width: 64px;
     align-self: flex-start;
   }
